Fix image size and alignment

--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -90,3 +90,7 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
+
+.profilePic img {
+  width: 290px;
+}
